--- a/TODO
+++ b/TODO
@@ -1,11 +1,6 @@
 O que o sistema precisa fazer quando inicializar:
     1 - Colocar os clientes e seus devidos carros na agenda.
-    2 - Verificar as datas agendadas no arquivo nextRevisions
-        Se (a data for anterior ao dia corrente) {
-            será escrita no arquivo previousRevisions
-        } se não {
-            ficará armazenada na Revisions
-        }
+    2 - Colocar as Reviews na Revisions para cada Cliente
 
 Criação dos menus.
 
